# joycond

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  README.md  build_deb.sh  joycond.conf.example
.github/workflows/: release.yml
android/: Vendor_057e_Product_2006.idc  Vendor_057e_Product_2008.idc  Vendor_057e_Product_2008.kl  joycond.rc
data/: com.github.DanielOgorchock.joycond.metainfo.xml
debian/: changelog  control  copyright  postinst
doc/: joycond.1
include/: android_log.h  config.h  ctlr_detector_android.h  ctlr_detector_udev.h  ctlr_mgr.h  epoll_mgr.h  epoll_subscriber.h  phys_ctlr.h  virt_ctlr.h  virt_ctlr_combined.h  virt_ctlr_passthrough.h  virt_ctlr_pro.h
src/: CMakeLists.txt  config.cpp  ctlr_detector_android.cpp  ctlr_detector_udev.cpp  ctlr_mgr.cpp  epoll_mgr.cpp  epoll_subscriber.cpp  main.c  main.cpp  phys_ctlr.cpp  virt_ctlr.cpp  virt_ctlr_combined.cpp  virt_ctlr_passthrough.cpp  virt_ctlr_pro.cpp
systemd/: joycond.conf  joycond.service
udev/: 72-joycond.rules  89-joycond.rules
